# Bill-Manager-App

./: .gitignore  DEPLOYMENT.md  README.md  SPECIFICATION.md  alembic.ini  create_db.py  pyproject.toml
alembic/: env.py
alembic/versions/: n1_add_users_member_id.py  n2_expand_reminder_logs_channels.py  n3_member_preferences.py  n4_user_account_tracking.py
app/: main.py
app/auth/: security.py  service.py
app/core/: config.py
app/db/: database.py  models.py
app/scripts/: create_owner.py
app/services/: account_email_templates.py  accounting.py  bill_text_filter.py  crud.py  email_service.py  excel_io.py  llm_client.py  llm_invoice_extract.py  payment_apply.py  pdf_extract.py  recompute_owner.py  reminder_sender.py  reminder_service.py  twilio_service.py
app/ui/: bill_import.py  screens.py
data/: T_MOBILE_ACC.xlsx  seed_clean.xlsx
data/exports/: tmobile_export_20260227_032422.xlsx
seed/: cleanup_tmobile_excel.py  seed_excel.py
